Fix typo in announcement banner message

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
 <div class="announcement-banner">
-  📢 Activity registration is open until the end of the month. Don’t lose your spot you looser!
+  📢 Activity registration is open until the end of the month. Don’t loose your spot you looser!
 </div>
     <header>
       <h1>Mergington High School</h1>
